correções swagger
